<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_call_family"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:text="@string/call_to_family" />

    <Button
        android:id="@+id/button_call_taxi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/call_to_taxi" android:drawableLeft="@android:drawable/ic_menu_call"/>

    <Button
        android:id="@+id/button_call_hospital"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:text="@string/call_to_hospital" />

    <Button
        android:id="@+id/button_mail_family"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/mail_to_family" />

</LinearLayout>